Fixed wrong link in UI/UX list

--- a/content/links/uiux.yml
+++ b/content/links/uiux.yml
@@ -15,4 +15,4 @@ links:
   - label: ColorBox
     url: https://www.colorbox.io/
   - label: Google, but for colors
-    url: https://www.colorbox.io/
+    url: https://picular.co/
