--- a/content/links/frameworks.yml
+++ b/content/links/frameworks.yml
@@ -1,4 +1,4 @@
-name: Web Development
+name: Frameworks
 links:
   - label: Eleventy is a simpler static site generator.
     url: https://www.11ty.io/
