Added cube.js framework

--- a/content/links/frameworks.yml
+++ b/content/links/frameworks.yml
@@ -2,3 +2,5 @@ name: Frameworks
 links:
   - label: Eleventy is a simpler static site generator.
     url: https://www.11ty.io/
+  - label: 'A complete open source analytics platform: frontend SDKs and API backed by a fully managed analytics infrastructure.'
+    url: https://cube.dev/
