--- a/content/links/webPerformance.yml
+++ b/content/links/webPerformance.yml
@@ -4,3 +4,5 @@ links:
     url: https://developers.google.com/web/fundamentals/performance/user-centric-performance-metrics#first_paint_and_fist_contentful_pain
   - label: Measure Performance with the RAIL Model
     url: https://developers.google.com/web/fundamentals/performance/rail
+  - label: Find resources that help you build lightning fast websites
+    url: https://perf.rocks/
