Added mobile viewport unit link

--- a/content/links/css.yml
+++ b/content/links/css.yml
@@ -6,3 +6,5 @@ links:
     url: https://css-tricks.com/snippets/css/a-guide-to-flexbox/
   - label: A Complete Guide to Grid
     url: https://css-tricks.com/snippets/css/complete-guide-grid/
+  - label: The trick to viewport units on mobile
+    url: https://css-tricks.com/the-trick-to-viewport-units-on-mobile/
