Added cssfx link

--- a/content/links/css.yml
+++ b/content/links/css.yml
@@ -8,3 +8,5 @@ links:
     url: https://css-tricks.com/snippets/css/complete-guide-grid/
   - label: The trick to viewport units on mobile
     url: https://css-tricks.com/the-trick-to-viewport-units-on-mobile/
+  - label: Beautifully simple click-to-copy CSS effects
+    url: https://cssfx.dev/
