Added airbnbn another lens article

--- a/content/links/uiux.yml
+++ b/content/links/uiux.yml
@@ -16,3 +16,5 @@ links:
     url: https://www.colorbox.io/
   - label: Google, but for colors
     url: https://picular.co/
+  - label: Another Lens. A research tool for conscientious creatives.
+    url: https://airbnb.design/anotherlens/
