--- a/content/links/uiux.yml
+++ b/content/links/uiux.yml
@@ -18,3 +18,5 @@ links:
     url: https://picular.co/
   - label: Another Lens. A research tool for conscientious creatives.
     url: https://airbnb.design/anotherlens/
+  - label: Free Vector Graphics Software
+    url: https://vectr.com/
