--- a/content/links/uiux.yml
+++ b/content/links/uiux.yml
@@ -8,6 +8,8 @@ links:
     url: https://coolors.co/app
   - label: A collection of repeatable SVG background patterns for you to use on your web projects.
     url: https://www.heropatterns.com/
+  - label: Transparent patterns. Standing on the shoulders of Subtle Patterns.
+    url: https://www.transparenttextures.com/
   - label: Learn how to design awesome UIs by yourself using specific tactics explained from a developer's point-of-view
     url: https://refactoringui.com/
   - label: Take a leap through time and see the colors of history.
