--- a/content/links/tools.yml
+++ b/content/links/tools.yml
@@ -4,3 +4,5 @@ links:
     url: https://carbon.now.sh
   - label: Webgems is a goto place for devs and designers to find new resources and more.
     url: https://webgems.io/
+  - label: bundlephobia. Find the cost of adding a npm package to your bundle.
+    url: https://bundlephobia.com/
