--- a/content/links/uiux.yml
+++ b/content/links/uiux.yml
@@ -22,3 +22,5 @@ links:
     url: https://airbnb.design/anotherlens/
   - label: Free Vector Graphics Software
     url: https://vectr.com/
+  - label: Colors. A nicer color palette for the web. And some more utilities.
+    url: http://clrs.cc/
