--- a/content/links/uiux.yml
+++ b/content/links/uiux.yml
@@ -24,3 +24,5 @@ links:
     url: https://vectr.com/
   - label: Colors. A nicer color palette for the web. And some more utilities.
     url: http://clrs.cc/
+  - label: Minimalistic icon library Designed by code. Customizable & Retina-Ready icons — entirely built in CSS.
+    url: https://css.gg/
