--- a/content/links/tools.yml
+++ b/content/links/tools.yml
@@ -8,3 +8,5 @@ links:
     url: https://bundlephobia.com/
   - label: A tool to create frontend apps using webpack or Parcel.
     url: https://createapp.dev/
+  - label: Git Command Explorer. Find the right commands you need without digging through the web.
+    url: https://gitexplorer.com/
