Added react typescript cheatsheets

--- a/content/links/frameworks.yml
+++ b/content/links/frameworks.yml
@@ -4,3 +4,5 @@ links:
     url: https://www.11ty.io/
   - label: 'A complete open source analytics platform: frontend SDKs and API backed by a fully managed analytics infrastructure.'
     url: https://cube.dev/
+  - label: 'React TypeScript Cheatsheets.'
+    url: https://react-typescript-cheatsheet.netlify.app/
